traces/bug_876.txt
examples++-load/iovtk.cpp:3336: error: DEAD_STORE
  The value written to &nbofsol (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:3336:5: Write of unused value
3334.       if (BCastTo<pmesh3>(args[1])) eTh= CastTo<pmesh3>(args[1]);
3335.       
3336.       nbofsol = l.size();
            ^
3337.       for (size_t i=2;i<args.size();i++){
3338.         size_t jj=i-2;
